[project]
name = "ytmtool"
version = "0.1.0"
description = "Youtube Music library tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ytmusicapi>=1.11.4",
]

[project.scripts]
ytmtool = "ytmtool:main"

[build-system]
requires = ["uv_build>=0.9.18,<0.10.0"]
build-backend = "uv_build"
